[tool.poetry]
name = "kugisaki-2o"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
googletranslate = "^2.1.2"
googletrans = "^3.0.0"
praw = "^7.2.0"
ffmpeg = "^1.4"
youtube-dl = "^2021.4.17"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
